--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <title>Sangam Bgk</title>
   </head>
   <body>
-    <script type="module" src="./app.js"></script>
+    <script type="module" src="./app.jsx"></script>
   </body>
 </html>
